--- a/Todo.Domain.Api/Todo.Domain.Api.csproj
+++ b/Todo.Domain.Api/Todo.Domain.Api.csproj
@@ -5,6 +5,10 @@
     <ProjectReference Include="..\Todo.Domain.Infra\Todo.Domain.Infra.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.3" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
