--- a/Todo.Domain.Api/Todo.Domain.Api.csproj
+++ b/Todo.Domain.Api/Todo.Domain.Api.csproj
@@ -6,6 +6,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.3" />
   </ItemGroup>
 
